--- a/.github/ISSUE_TEMPLATE/bug-report.zh-CN.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.zh-CN.yml
@@ -15,7 +15,7 @@ body:
   - type: input
     id: version
     attributes:
-      label: zyfun 版本
+      label: detectivePlayer 版本
       description: 请检查在最新项目版本中能否重现此 issue。
       placeholder: 请填写
     validations:
